<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi Salud</string>
    <string name="widget_description">Pasos, Body Battery, FC en reposo, sueño, forma del día y el entreno que toca</string>
    <string name="widget_battery">Batería</string>
    <string name="widget_hr">FC reposo</string>
    <string name="widget_sleep">Sueño</string>
    <string name="widget_readiness">Readiness</string>
</resources>
